--- a/mysqldump.cfg.example
+++ b/mysqldump.cfg.example
@@ -12,7 +12,7 @@ max_copies_count=5
 ;encrypt_pass = 123456
 compress_level = 6
 
-[mysql=ideapush]
+[mysql=NAMESPACE]
 ; DSN
 ;mysql_host = localhost
 ;mysql_user = test
@@ -22,17 +22,11 @@ mysql_base = test
 ; Options:
 mysql_options = --login-path=localhost -Q -e --no-autocommit --opt
 
-[webdav=user@yandex]
-webdav_host = yandex.ru
-webdav_user = user@yandex.ru
-webdav_pass = password
-max_copies_count=1
+[storage=yandex]
+; in future versions
 
-[webdav=user@gmail]
-webdav_host = gmail.com
-webdav_user = user@gmail.com
-webdav_pass = password
-max_copies_count=1
+[webdav=yandex]
+; in future versions
 
 [sendmail]
 ; API
@@ -46,7 +40,7 @@ smtp_host = localhost
 limit_size_source = 50M
 chunk_max_size = 5M
 
-[sendmail=basename]
+[sendmail=NAMESPACE]
 ; SMTP or API
 transport = api
 ; header
@@ -56,7 +50,7 @@ send_to = user@host
 send_cc = user2@host
 send_bcc = user3@host
 
-[sendmail=basename2]
+[sendmail=NAMESPACE2]
 ; SMTP or API
 transport = smtp
 ; header
